@@ -124,6 +124,13 @@ COMMONDIR:=../../h2shared
 COMMON_HW:=../shared
 
 # General options (see explanations at the top)
+OPT_EXTRA=yes
+COMPILE_32BITS=no
+USE_X86_ASM=yes
+
+LINK_GL_LIBS=no
+USE_3DFXGAMMA=no
+
 USE_SOUND=yes
 USE_ALSA=yes
 USE_OSS=yes
@@ -132,15 +139,12 @@ USE_SDLAUDIO=yes
 USE_MIDI=yes
 USE_CDAUDIO=yes
 USE_SDLCD=no
+
+LINK_DIRECTX=no
 WITH_SPLASHES=yes
 USE_MGL=yes
 USE_WINSOCK2=no
-LINK_DIRECTX=no
-OPT_EXTRA=yes
-LINK_GL_LIBS=no
-USE_3DFXGAMMA=no
-USE_X86_ASM=yes
-COMPILE_32BITS=no
+
 # Enable/disable codecs for streaming music support:
 USE_CODEC_WAVE=yes
 USE_CODEC_MP3=yes
